# fakeSearchEngines

./: .gitignore  CMakeLists.txt  README.md
backend/: .stxxl  CMakeLists.txt  PorterStemming.cpp  main.cpp  main.out  preprocessing.cpp  preprocessing.h  stop.txt  test.cpp
backend/index/: Index.cpp  Index.h
backend/server/: data.json  http_server.cpp  http_server.out  rest_server.cpp  rest_server.out  server.cpp  server.out
backend/utility/: FileManager.cpp  FileManager.h  Print.cpp  Print.h  availableMemory.cpp  availableMemory.h  definition.h  utility.cpp  utility.h  utilityold.h
frontend/src/components/: dashboard-sidebar.js
frontend/src/components/dashboard/: budget.js  latest-orders.js  sales.js  tasks-progress.js  total-customers.js  total-profit.js
frontend/src/pages/: browser.js  data.json  index.js
frontend/src/pages/Presentation/: index.js
